@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     -
   Bugfixes:
     - Fixed an issue when importing into your archive
+    - Fixed a crash where you could submit the import dialog without having imported a string
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.45
